# meta-benchmark

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
benchmarks/: CMakeLists.txt  sample_strings.cpp  sample_vectors.cpp
docs/: usage.md
src/meta_benchmark/: __init__.py  __main__.py  cli.py  constants.py  cpu_affinity.py  exceptions.py  filters.py  io_utils.py  logging_config.py  progress.py  runner.py  stats.py
