[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-benchmark"
version = "0.1.0"
description = "Run Google Benchmark binaries with statistical meta-repetitions until results stabilize"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "sbstndbs" }
]
keywords = [
    "benchmark",
    "google-benchmark",
    "statistics",
    "performance",
    "testing",
    "profiling",
    "ci",
    "confidence-interval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sbstndbs/meta-benchmark"
Repository = "https://github.com/sbstndbs/meta-benchmark"
Issues = "https://github.com/sbstndbs/meta-benchmark/issues"

[project.scripts]
meta-benchmark = "meta_benchmark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_benchmark"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/benchmarks",
    "/build",
    "/raw_runs",
    "*.json",
    "/main.py",
]

# Optional: pytest configuration for future tests
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# Optional: ruff linter configuration
[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line too long - handled by formatter

# Optional: mypy type checking configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
packages = ["meta_benchmark"]
